--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="debug" class="detection"></div>
 </section>
 <script src="vendor/jquery-1.9.0.min.js" type="text/javascript"></script>
-<script src="../dist/quagga.js" type="text/javascript"></script>
+<script src="quagga.js" type="text/javascript"></script>
 <script src="file_input.js" type="text/javascript"></script>
 </body>
 </html>
