--- a/index.html
+++ b/index.html
@@ -16,35 +16,16 @@
     <section id="container" class="container">
         <div class="controls">
             <fieldset class="input-group">
+                <button class="start">Start</button>
                 <button class="stop">Stop</button>
             </fieldset>
+            <input type="text" class="result">
             <fieldset class="reader-config-group">
                 <label>
                     <span>Barcode-Type</span>
                     <select name="decoder_readers">
                         <option value="code_128" selected="selected">Code 128</option>
                         <option value="code_39">Code 39</option>
-                    </select>
-                </label>
-                <label>
-                    <span>Resolution (width)</span>
-                    <select name="input-stream_constraints">
-                        <option value="320x240">320px</option>
-                        <option selected="selected" value="640x480">640px</option>
-                        <option value="800x600">800px</option>
-                        <option value="1280x720">1280px</option>
-                        <option value="1600x960">1600px</option>
-                        <option value="1920x1080">1920px</option>
-                    </select>
-                </label>
-                <label>
-                    <span>Patch-Size</span>
-                    <select name="locator_patch-size">
-                        <option value="x-small">x-small</option>
-                        <option value="small">small</option>
-                        <option selected="selected" value="medium">medium</option>
-                        <option value="large">large</option>
-                        <option value="x-large">x-large</option>
                     </select>
                 </label>
             </fieldset>
@@ -56,8 +37,9 @@
       <div id="interactive" class="viewport"></div>
     </section>
     <script src="vendor/jquery-1.9.0.min.js" type="text/javascript"></script>
-    <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
+    <!-- <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script> -->
     <script src="quagga.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
     <script src="live_w_locator.js" type="text/javascript"></script>
   </body>
 </html>
