--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>index</title>
     <meta name="description" content="" />
     <meta name="author" content="Christoph Oberhofer" />
-
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
