--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <script src="vendor/jquery-1.9.0.min.js" type="text/javascript"></script>
-    <script src="fullscreen-api-polyfill.min.js" type="text/javascript"></script>
+    <script src="jquery.fullscreen.js" type="text/javascript"></script>
     <script src="quagga.min.js" type="text/javascript"></script>
     <script src="live_w_locator.js" type="text/javascript"></script>
   </body>
