--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <button class="start">Start</button>
+    <button class="start" id="scan">Start</button>
     <input type="text" class="result">
     <script src="vendor/jquery-1.9.0.min.js" type="text/javascript"></script>
     <script src="quagga.min.js" type="text/javascript"></script>
